fixing broken css

--- a/css/main.css
+++ b/css/main.css
@@ -258,8 +258,11 @@ padding-bottom: 100px;
 
 .button-wrapper {
   position: relative;
+  display: grid;
   text-align: center;
 }
+
+
 #modalbutton {
   margin: auto;
   font-size: 2.6vw;
@@ -351,7 +354,7 @@ padding-bottom: 100px;
     font-size: 2.8vw;
   }
 
-  #button {
+  #modalbutton, #phdbutton {
     font-size: 4.7vw;
   }
 }
